# rust-wa-protocol-proto

./: Cargo.toml  README.md  build.rs
protos/: WAProto.proto
src/: lib.rs
tests/: roundtrip.rs
